kubernetes/lighthouse-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: lighthouse
  name: lighthouse
spec:
  serviceName: lighthouse
  replicas: 1
  selector:
    matchLabels:
      app: lighthouse
  template:
    metadata:
      labels:
        app: lighthouse
    spec:
      securityContext:
        runAsUser: 0
        fsGroup: 0
      containers:
      - image: sigp/lighthouse
        imagePullPolicy: "Always"
        name: lighthouse
        ports:
        - protocol: TCP   
          containerPort: 5052
          containerPort: 9000
        - protocol: UDP
          containerPort: 9000
        volumeMounts:
        - mountPath: /root/.lighthouse
          name: lighthouse
        command: ["lighthouse"]
        args: ["beacon","--http"]
      restartPolicy: Always
  volumeClaimTemplates:
    - metadata:
        name: lighthouse
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: ethereum
        resources:
          requests:
            storage: 250Gi
