kubernetes/prysm-beacon-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: prysm-beacon
  name: prysm-beacon
spec:
  serviceName: prysm-beacon
  replicas: 2
  selector:
    matchLabels:
      app: prysm-beacon
  template:
    metadata:
      labels:
        app: prysm-beacon
    spec:
      securityContext:
        runAsUser: 0
        fsGroup: 0
      containers:
      - image: gcr.io/prysmaticlabs/prysm/beacon-chain:stable
        imagePullPolicy: "Always"
        name: prysm-beacon
        resources:
          requests:
            memory: "5G"
            cpu: "0.5"
          limits:
            memory: "10G"
            cpu: "1"
        ports:
        - protocol: TCP
          containerPort: 4000
          containerPort: 13000
          containerPort: 8080
          containerPort: 3500
        - protocol: UDP
          containerPort: 12000
        volumeMounts:
        - mountPath: /data
          name: prysm-beacon
          subPath: data
        - mountPath: /root/consensus_jwt
          name: jwt-prysm-consensus
        args:
        - "--accept-terms-of-use"
        - "--datadir"
        - "/data"
        - "--jwt-secret"
        - "/root/consensus_jwt/jwt.hex"
        - "--grpc-gateway-host"
        - "0.0.0.0"
        - "--rpc-host"
        - "0.0.0.0"
        - "--monitoring-host"
        - "0.0.0.0"
        - "--monitoring-port"
        - "8080"
        - "--execution-endpoint"
        - "http://eth-executor:8551"
        - "--enable-debug-rpc-endpoints"
      volumes:
      - name: jwt-prysm-consensus
        secret:
           secretName: secret-jwt-eth-prysm
      restartPolicy: Always
  volumeClaimTemplates:
    - metadata:
        name: prysm-beacon
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: ethereum-storage
        resources:
          requests:
            storage: 300Gi
