kubernetes/prysm-validator-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: prysm-validator
  name: prysm-validator
spec:
  serviceName: prysm-validator
  replicas: 1
  selector:
    matchLabels:
      app: prysm-validator
  template:
    metadata:
      labels:
        app: prysm-validator
    spec:
      securityContext:
        runAsUser: 0
        fsGroup: 0
      containers:
      - image: gcr.io/prysmaticlabs/prysm/validator:stable
        imagePullPolicy: "Always"
        name: prysm-validator
        resources:
          requests:
            memory: "5G"
            cpu: "0.5"
          limits:
            memory: "10G"
            cpu: "1"
        ports:
        - protocol: TCP
          containerPort: 4000
        volumeMounts:
        - mountPath: /data
          name: prysm-validator
          subPath: data
        args:
        - "--accept-terms-of-use"
        - "--datadir=/data"
        - "--graffiti='Pura vida'"
        - "--beacon-rest-api-provider=http://prysm-beacon:3500"
        - "--beacon-rpc-provider=ws://prysm-beacon:4000"
        - "--validators-external-signer-url=http://web3signer:9000"
        - "--enable-beacon-rest-api"
      volumes:
      - name: jwt-prysm-consensus
        secret:
           secretName: secret-jwt-eth-prysm
      restartPolicy: Always
  volumeClaimTemplates:
    - metadata:
        name: prysm-validator
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: ethereum-storage
        resources:
          requests:
            storage: 20Gi
