kubernetes/eth-executor-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: eth-executor
  name: eth-executor
spec:
  ports:
  - name: http
    port: 8545
    targetPort: 8545
    protocol: TCP
  - name: tcp
    port: 30303
    targetPort: 30303
    protocol: TCP
  - name: ws
    port: 8551
    targetPort: 8551
    protocol: TCP
  selector:
    app: eth-executor
