kubernetes/lighthouse-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: lighthouse
  name: lighthouse
spec:
  ports:
  - name: http
    port: 5052
    targetPort: 5052
    protocol: TCP
  - name: tcp
    port: 9000
    targetPort: 9000
    protocol: TCP
  - name: udp
    port: 9000
    targetPort: 9000
    protocol: UDP
  selector:
    app: lighthouse
