kubernetes/prysm-beacon-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prysm-beacon
  name: prysm-beacon
spec:
  ports:
  - name: http
    port: 4000
    targetPort: 4000
    protocol: TCP
  - name: tcp
    port: 13000
    targetPort: 13000
    protocol: TCP
  - name: debug
    port: 3500
    targetPort: 3500
    protocol: TCP
  - name: monitoring
    port: 8080
    targetPort: 8080
    protocol: TCP
  - name: udp
    port: 12000
    targetPort: 12000
    protocol: UDP
  selector:
    app: prysm-beacon
