kubernetes/prysm-validator-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: prysm-validator
  name: prysm-validator
spec:
  ports:
  - name: http
    port: 4000
    targetPort: 4000
    protocol: TCP
  selector:
    app: prysm-validator
