kubernetes/web3signer-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web3signer
  name: web3signer
spec:
  ports:
  - name: http
    port: 9000
    targetPort: 9000
    protocol: TCP
  selector:
    app: web3signer
