kubernetes/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-http
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`eth.edenia.cloud`)
    services:
    - kind: Service
      name: prysm-beacon
      port: 8080
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-https
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`eth.edenia.cloud`)
    services:
    - kind: Service
      name: prysm-beacon
      port: 8080
  tls:
    certResolver: myresolver
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-http
spec:
  entryPoints:
    - web
  routes:
  - kind: Rule
    match: Host(`dash.tikuna.io`)
    services:
    - kind: Service
      name: grafana-eth
      port: 3000
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-https
spec:
  entryPoints:
    - websecure
  routes:
  - kind: Rule
    match: Host(`dash.tikuna.io`)
    services:
    - kind: Service
      name: grafana-eth
      port: 3000
  tls:
    certResolver: myresolver
